--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "nativewind-env.d.ts"
-  ]
+,  "app/_layout.jsx"  ]
+// , "app/+not-found.jsx", "app/_layout.jsx"  ]
 }
