--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/philosopher": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "@reduxjs/toolkit": "^2.6.0",
     "expo": "~52.0.30",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
@@ -40,6 +43,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "react-redux": "^9.2.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
