setup for build & create .apk build

--- a/app.json
+++ b/app.json
@@ -4,18 +4,17 @@
     "slug": "Plantify",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/adaptive-icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": false,
-    "sdkVersion": "51.0.0",
+    "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.mukesh63.Plantify"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/Plantify.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.mukesh63.Plantify"
@@ -25,7 +24,7 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-   "plugins": [
+    "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
@@ -35,25 +34,18 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ],
-      [
-        "expo-build-properties",
-        {
-          "android": {
-            "kotlinVersion": "1.9.24",
-            "suppressKotlinVersionCompatibilityCheck": true
-          }
-        }
       ]
     ],
     "experiments": {
       "typedRoutes": true
     },
     "extra": {
+      "router": {
+        "origin": false
+      },
       "eas": {
         "projectId": "bec032db-cbbf-4cd2-af95-6cbc9df7a526"
       }
-    },
-    "owner": "mukesh63"
+    }
   }
 }
